--- a/galaxy/libreoffice-fresh/.artixlinux/pkgbase.yaml
+++ b/galaxy/libreoffice-fresh/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: libreoffice-fresh
-  version: 25.2.3-2.1
-  arch:
-    - x86_64
-  pkgname:
-    - libreoffice-fresh-sdk
-    - libreoffice-fresh
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 25.2.3-2.1
+    version: 25.2.3-3
     packages:
-      - libreoffice-fresh-sdk-25.2.3-2.1-x86_64.pkg.tar.zst
-      - libreoffice-fresh-25.2.3-2.1-x86_64.pkg.tar.zst
+      - libreoffice-fresh-sdk-25.2.3-3-x86_64.pkg.tar.zst
+      - libreoffice-fresh-25.2.3-3-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
