--- a/galaxy/libreoffice-still/.artixlinux/pkgbase.yaml
+++ b/galaxy/libreoffice-still/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: libreoffice-still
-  version: 24.8.6-4
-  arch:
-    - x86_64
-  pkgname:
-    - libreoffice-still-sdk
-    - libreoffice-still
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 24.8.6-4
+    version: 24.8.6-5
     packages:
-      - libreoffice-still-sdk-24.8.6-4-x86_64.pkg.tar.zst
-      - libreoffice-still-24.8.6-4-x86_64.pkg.tar.zst
+      - libreoffice-still-sdk-24.8.6-5-x86_64.pkg.tar.zst
+      - libreoffice-still-24.8.6-5-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
