--- a/world/python-pyarrow/.artixlinux/pkgbase.yaml
+++ b/world/python-pyarrow/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: python-pyarrow
-  version: 19.0.1-1.1
-  arch:
-    - x86_64
-  pkgname:
-    - python-pyarrow
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -18,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: 18.1.0-1
     packages:
       - python-pyarrow-18.1.0-1-x86_64.pkg.tar.zst
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 19.0.1-1.1
+    version: 20.0.0-1
     packages:
-      - python-pyarrow-19.0.1-1.1-x86_64.pkg.tar.zst
+      - python-pyarrow-20.0.0-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
