--- a/world/kicad-library/.artixlinux/pkgbase.yaml
+++ b/world/kicad-library/.artixlinux/pkgbase.yaml
@@ -1,13 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: kicad-library
-  version: 9.0.1-1
-  arch:
-    - any
-  pkgname:
-    - kicad-library
-    - kicad-library-3d
 actions:
   addRepo: world
   removeRepo: null
@@ -20,38 +12,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 9.0.1-1
+    version: 9.0.2-1
     packages:
-      - kicad-library-9.0.1-1-any.pkg.tar.zst
-      - kicad-library-3d-9.0.1-1-any.pkg.tar.zst
+      - kicad-library-9.0.2-1-any.pkg.tar.zst
+      - kicad-library-3d-9.0.2-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
