--- a/world/fmt/.artixlinux/pkgbase.yaml
+++ b/world/fmt/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: fmt
-  version: 11.1.4-1
-  arch:
-    - x86_64
-  pkgname:
-    - fmt
-    - fmt-docs
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 11.1.4-1
+    version: 11.2.0-1
     packages:
-      - fmt-11.1.4-1-x86_64.pkg.tar.zst
-      - fmt-docs-11.1.4-1-x86_64.pkg.tar.zst
+      - fmt-11.2.0-1-x86_64.pkg.tar.zst
+      - fmt-docs-11.2.0-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
