--- a/galaxy/linux-zen/.artixlinux/pkgbase.yaml
+++ b/galaxy/linux-zen/.artixlinux/pkgbase.yaml
@@ -1,59 +1,62 @@
 ---
-pkgbase:
-  name: linux-zen
-  version: 6.14.4.zen1-2
-  arch:
-    - x86_64
-  pkgname:
-    - linux-zen
-    - linux-zen-headers
-    - linux-zen-docs
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 6.14.4.zen1-2
+    version: 6.14.6.zen1-1
     packages:
-      - linux-zen-6.14.4.zen1-2-x86_64.pkg.tar.zst
-      - linux-zen-headers-6.14.4.zen1-2-x86_64.pkg.tar.zst
-      - linux-zen-docs-6.14.4.zen1-2-x86_64.pkg.tar.zst
+      - linux-zen-6.14.6.zen1-1-x86_64.pkg.tar.zst
+      - linux-zen-headers-6.14.6.zen1-1-x86_64.pkg.tar.zst
+      - linux-zen-docs-6.14.6.zen1-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
