--- a/world/libxmp/PKGBUILD
+++ b/world/libxmp/PKGBUILD
@@ -1,10 +1,11 @@
-# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
+# Contributor: Sven-Hendrik Haase <svenstaro@archlinux.org>
 # Contributor: HurricanePootis <hurricanepootis@protonmail.com>
 # Contributor: grimi
 
 pkgname=libxmp
-pkgver=4.6.2
-pkgrel=3
+pkgver=4.6.3
+pkgrel=1
 pkgdesc="Library that supports over 90 module formats (Amiga, Atari, ..)"
 arch=('x86_64')
 url="http://xmp.sourceforge.net/"
@@ -12,7 +13,7 @@ license=('MIT')
 depends=('glibc')
 options=(!emptydirs)
 source=("http://download.sourceforge.net/project/xmp/$pkgname/$pkgver/$pkgname-$pkgver.tar.gz")
-sha256sums=('acac1705be2c4fb4d2d70dc05759853ba6aab747a83de576b082784d46f5a4b9')
+sha256sums=('b189a2ff3f3eef0008512e0fb27c2cdc27480bc1066b82590a84d02548fab96d')
 
 build() {
   cd $pkgname-$pkgver
