--- a/world/fwupd/.artixlinux/pkgbase.yaml
+++ b/world/fwupd/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: fwupd
-  version: 2.0.8-1
-  arch:
-    - x86_64
-  pkgname:
-    - fwupd
-    - fwupd-docs
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2.0.8-1
+    version: 2.0.9-1
     packages:
-      - fwupd-2.0.8-1-x86_64.pkg.tar.zst
-      - fwupd-docs-2.0.8-1-x86_64.pkg.tar.zst
+      - fwupd-2.0.9-1-x86_64.pkg.tar.zst
+      - fwupd-docs-2.0.9-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
