--- a/world/kitty/.artixlinux/pkgbase.yaml
+++ b/world/kitty/.artixlinux/pkgbase.yaml
@@ -1,59 +1,62 @@
 ---
-pkgbase:
-  name: kitty
-  version: 0.41.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - kitty
-    - kitty-terminfo
-    - kitty-shell-integration
 actions:
   addRepo: world
-  removeRepo: galaxy
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.41.1-1
+    version: 0.42.0-1
     packages:
-      - kitty-0.41.1-1-x86_64.pkg.tar.zst
-      - kitty-terminfo-0.41.1-1-x86_64.pkg.tar.zst
-      - kitty-shell-integration-0.41.1-1-x86_64.pkg.tar.zst
+      - kitty-0.42.0-1-x86_64.pkg.tar.zst
+      - kitty-terminfo-0.42.0-1-x86_64.pkg.tar.zst
+      - kitty-shell-integration-0.42.0-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
