--- a/world/snowball/.artixlinux/pkgbase.yaml
+++ b/world/snowball/.artixlinux/pkgbase.yaml
@@ -1,56 +1,61 @@
 ---
-pkgbase:
-  name: snowball
-  version: 2.2.0-2
-  arch:
-    - x86_64
-  pkgname:
-    - snowball
-    - libstemmer
 actions:
-  addRepo: null
+  addRepo: world
   removeRepo: null
-  triggersBuild: false
+  triggersBuild: true
   triggersRebuild: false
-  triggersRepoAdd: false
+  triggersRepoAdd: true
   triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2.2.0-2
+    version: 2.2.0-3
     packages:
-      - snowball-2.2.0-2-x86_64.pkg.tar.zst
-      - libstemmer-2.2.0-2-x86_64.pkg.tar.zst
+      - snowball-2.2.0-3-x86_64.pkg.tar.zst
+      - libstemmer-2.2.0-3-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
+team: world
